sqlparser/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 20
	INSERT  shift 21
	UPDATE  shift 22
	DELETE  shift 23
	SET  shift 24
	SHOW  shift 25
	USE  shift 36
	BEGIN  shift 30
	START  shift 31
	COMMIT  shift 32
	ROLLBACK  shift 33
	REPLACE  shift 34
	ADMIN  shift 35
	CREATE  shift 26
	ALTER  shift 27
	DROP  shift 29
	RENAME  shift 28
	TRUNCATE  shift 37
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	show_statement  goto 8
	create_statement  goto 9
	alter_statement  goto 10
	rename_statement  goto 11
	drop_statement  goto 12
	begin_statement  goto 13
	commit_statement  goto 14
	rollback_statement  goto 15
	replace_statement  goto 16
	admin_statement  goto 17
	use_statement  goto 18
	truncate_statement  goto 19

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 193)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 39
	MINUS  shift 40
	EXCEPT  shift 41
	INTERSECT  shift 42
	.  reduce 2 (src line 199)

	union_op  goto 38

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 204)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 205)


state 6
	command:  delete_statement.    (5)

	.  reduce 5 (src line 206)


state 7
	command:  set_statement.    (6)

	.  reduce 6 (src line 207)


state 8
	command:  show_statement.    (7)

	.  reduce 7 (src line 208)


state 9
	command:  create_statement.    (8)

	.  reduce 8 (src line 209)


state 10
	command:  alter_statement.    (9)

	.  reduce 9 (src line 210)


state 11
	command:  rename_statement.    (10)

	.  reduce 10 (src line 211)


state 12
	command:  drop_statement.    (11)

	.  reduce 11 (src line 212)


state 13
	command:  begin_statement.    (12)

	.  reduce 12 (src line 213)


state 14
	command:  commit_statement.    (13)

	.  reduce 13 (src line 214)


state 15
	command:  rollback_statement.    (14)

	.  reduce 14 (src line 215)


state 16
	command:  replace_statement.    (15)

	.  reduce 15 (src line 216)


state 17
	command:  admin_statement.    (16)

	.  reduce 16 (src line 217)


state 18
	command:  use_statement.    (17)

	.  reduce 17 (src line 218)


state 19
	command:  truncate_statement.    (18)

	.  reduce 18 (src line 219)


state 20
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list 
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$55: .    (55)

	.  reduce 55 (src line 439)

	comment_opt  goto 43
	$$55  goto 44

state 21
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$55: .    (55)

	.  reduce 55 (src line 439)

	comment_opt  goto 45
	$$55  goto 44

state 22
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$55: .    (55)

	.  reduce 55 (src line 439)

	comment_opt  goto 46
	$$55  goto 44

state 23
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$55: .    (55)

	.  reduce 55 (src line 439)

	comment_opt  goto 47
	$$55  goto 44

state 24
	set_statement:  SET.comment_opt update_list 
	set_statement:  SET.comment_opt NAMES DEFAULT 
	set_statement:  SET.comment_opt NAMES value_expression 
	set_statement:  SET.comment_opt NAMES value_expression COLLATE value_expression 
	$$55: .    (55)

	.  reduce 55 (src line 439)

	comment_opt  goto 48
	$$55  goto 44

state 25
	show_statement:  SHOW.value_expression 
	show_statement:  SHOW.TIME ZONE 
	show_statement:  SHOW.TRANSACTION ISOLATION LEVEL 
	show_statement:  SHOW.SESSION AUTHORIZATION 
	show_statement:  SHOW.ALL 

	ALL  shift 53
	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	TIME  shift 50
	SESSION  shift 52
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	TRANSACTION  shift 51
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 49
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 26
	create_statement:  CREATE.TABLE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (218)

	TABLE  shift 74
	VIEW  shift 76
	UNIQUE  shift 77
	.  reduce 218 (src line 1167)

	constraint_opt  goto 75

state 27
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (209)

	VIEW  shift 79
	IGNORE  shift 80
	.  reduce 209 (src line 1145)

	ignore_opt  goto 78

state 28
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 81
	.  error


state 29
	drop_statement:  DROP.TABLE exists_opt ID 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 82
	INDEX  shift 83
	VIEW  shift 84
	.  error


state 30
	begin_statement:  BEGIN.    (37)

	.  reduce 37 (src line 343)


state 31
	begin_statement:  START.TRANSACTION 

	TRANSACTION  shift 85
	.  error


state 32
	commit_statement:  COMMIT.    (39)

	.  reduce 39 (src line 354)


state 33
	rollback_statement:  ROLLBACK.    (40)

	.  reduce 40 (src line 360)


state 34
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression SET update_list 
	$$55: .    (55)

	.  reduce 55 (src line 439)

	comment_opt  goto 86
	$$55  goto 44

state 35
	admin_statement:  ADMIN.dml_table_expression column_list_opt row_list 
	admin_statement:  ADMIN.HELP 

	ID  shift 89
	HELP  shift 88
	.  error

	dml_table_expression  goto 87

state 36
	use_statement:  USE.sql_id 

	ID  shift 91
	.  error

	sql_id  goto 90

state 37
	truncate_statement:  TRUNCATE.comment_opt table_opt dml_table_expression 
	$$55: .    (55)

	.  reduce 55 (src line 439)

	comment_opt  goto 92
	$$55  goto 44

state 38
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 20
	.  error

	select_statement  goto 93

state 39
	union_op:  UNION.    (59)
	union_op:  UNION.ALL 

	ALL  shift 94
	.  reduce 59 (src line 458)


state 40
	union_op:  MINUS.    (61)

	.  reduce 61 (src line 467)


state 41
	union_op:  EXCEPT.    (62)

	.  reduce 62 (src line 471)


state 42
	union_op:  INTERSECT.    (63)

	.  reduce 63 (src line 475)


state 43
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list 
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (64)

	DISTINCT  shift 96
	.  reduce 64 (src line 480)

	distinct_opt  goto 95

state 44
	comment_opt:  $$55.comment_list 
	comment_list: .    (57)

	.  reduce 57 (src line 449)

	comment_list  goto 97

state 45
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	ignore_opt: .    (209)

	IGNORE  shift 80
	.  reduce 209 (src line 1145)

	ignore_opt  goto 98

state 46
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 89
	.  error

	dml_table_expression  goto 99

state 47
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 100
	.  error


state 48
	set_statement:  SET comment_opt.update_list 
	set_statement:  SET comment_opt.NAMES DEFAULT 
	set_statement:  SET comment_opt.NAMES value_expression 
	set_statement:  SET comment_opt.NAMES value_expression COLLATE value_expression 

	ID  shift 65
	NAMES  shift 102
	.  error

	column_name  goto 104
	update_list  goto 101
	update_expression  goto 103
	sql_id  goto 105

state 49
	show_statement:  SHOW value_expression.    (32)
	value_expression:  value_expression.CONCAT value_expression 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	CONCAT  shift 106
	'|'  shift 108
	'&'  shift 107
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'^'  shift 109
	.  reduce 32 (src line 309)


state 50
	show_statement:  SHOW TIME.ZONE 

	ZONE  shift 115
	.  error


state 51
	show_statement:  SHOW TRANSACTION.ISOLATION LEVEL 

	ISOLATION  shift 116
	.  error


state 52
	show_statement:  SHOW SESSION.AUTHORIZATION 

	AUTHORIZATION  shift 117
	.  error


state 53
	show_statement:  SHOW ALL.    (36)

	.  reduce 36 (src line 335)


state 54
	value_expression:  value.    (138)

	.  reduce 138 (src line 812)


state 55
	value_expression:  column_name.    (139)

	.  reduce 139 (src line 817)


state 56
	value_expression:  tuple.    (140)

	.  reduce 140 (src line 821)


state 57
	value_expression:  unary_operator.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 118
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 58
	value_expression:  sql_id.'(' ')' 
	value_expression:  sql_id.'(' select_expression_list ')' 
	value_expression:  sql_id.'(' DISTINCT select_expression_list ')' 
	column_name:  sql_id.    (169)

	'('  shift 119
	.  reduce 169 (src line 961)


state 59
	value_expression:  keyword_as_func.'(' select_expression_list ')' 

	'('  shift 120
	.  error


state 60
	value_expression:  case_expression.    (155)

	.  reduce 155 (src line 892)


state 61
	value:  STRING.    (172)

	.  reduce 172 (src line 975)


state 62
	value:  NUMBER.    (173)

	.  reduce 173 (src line 980)


state 63
	value:  VALUE_ARG.    (174)

	.  reduce 174 (src line 984)


state 64
	value:  NULL.    (175)

	.  reduce 175 (src line 988)


state 65
	column_name:  ID.'.' sql_id 
	column_name:  ID.'.' ID '.' sql_id 
	sql_id:  ID.    (222)

	'.'  shift 121
	.  reduce 222 (src line 1177)


state 66
	tuple:  '('.value_expression_list ')' 
	subquery:  '('.select_statement ')' 

	SELECT  shift 20
	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	select_statement  goto 123
	value  goto 54
	value_expression  goto 124
	tuple  goto 56
	value_expression_list  goto 122
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 67
	tuple:  subquery.    (134)

	.  reduce 134 (src line 791)


state 68
	unary_operator:  '+'.    (158)

	.  reduce 158 (src line 907)


state 69
	unary_operator:  '-'.    (159)

	.  reduce 159 (src line 912)


state 70
	unary_operator:  '~'.    (160)

	.  reduce 160 (src line 916)


state 71
	keyword_as_func:  IF.    (156)

	.  reduce 156 (src line 897)


state 72
	keyword_as_func:  VALUES.    (157)

	.  reduce 157 (src line 902)


state 73
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (162)

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  reduce 162 (src line 927)

	value  goto 54
	value_expression  goto 126
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	value_expression_opt  goto 125
	sql_id  goto 58

state 74
	create_statement:  CREATE TABLE.not_exists_opt ID force_eof 
	not_exists_opt: .    (207)

	IF  shift 128
	.  reduce 207 (src line 1140)

	not_exists_opt  goto 127

state 75
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 129
	.  error


state 76
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 91
	.  error

	sql_id  goto 130

state 77
	constraint_opt:  UNIQUE.    (219)

	.  reduce 219 (src line 1169)


state 78
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 131
	.  error


state 79
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 91
	.  error

	sql_id  goto 132

state 80
	ignore_opt:  IGNORE.    (210)

	.  reduce 210 (src line 1147)


state 81
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 133
	.  error


state 82
	drop_statement:  DROP TABLE.exists_opt ID 
	exists_opt: .    (205)

	IF  shift 135
	.  reduce 205 (src line 1135)

	exists_opt  goto 134

state 83
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 91
	.  error

	sql_id  goto 136

state 84
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (205)

	IF  shift 135
	.  reduce 205 (src line 1135)

	exists_opt  goto 137

state 85
	begin_statement:  START TRANSACTION.    (38)

	.  reduce 38 (src line 348)


state 86
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression SET update_list 

	INTO  shift 138
	.  error


state 87
	admin_statement:  ADMIN dml_table_expression.column_list_opt row_list 
	column_list_opt: .    (195)

	'('  shift 140
	.  reduce 195 (src line 1087)

	column_list_opt  goto 139

state 88
	admin_statement:  ADMIN HELP.    (42)

	.  reduce 42 (src line 371)


state 89
	dml_table_expression:  ID.    (97)
	dml_table_expression:  ID.'.' ID 

	'.'  shift 141
	.  reduce 97 (src line 629)


state 90
	use_statement:  USE sql_id.    (43)

	.  reduce 43 (src line 376)


state 91
	sql_id:  ID.    (222)

	.  reduce 222 (src line 1177)


state 92
	truncate_statement:  TRUNCATE comment_opt.table_opt dml_table_expression 
	table_opt: .    (224)

	TABLE  shift 143
	.  reduce 224 (src line 1188)

	table_opt  goto 142

state 93
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (21)

	.  reduce 21 (src line 230)

	union_op  goto 38

state 94
	union_op:  UNION ALL.    (60)

	.  reduce 60 (src line 463)


state 95
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list 
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 154
	NULL  shift 64
	VALUES  shift 72
	ID  shift 148
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 153
	'~'  shift 70
	NOT  shift 152
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	'*'  shift 146
	IF  shift 71
	.  error

	select_expression_list  goto 144
	select_expression  goto 145
	expression  goto 147
	boolean_expression  goto 149
	condition  goto 151
	value  goto 54
	value_expression  goto 150
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 96
	distinct_opt:  DISTINCT.    (65)

	.  reduce 65 (src line 484)


state 97
	comment_opt:  $$55 comment_list.    (56)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 155
	.  reduce 56 (src line 443)


state 98
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 156
	.  error


state 99
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 157
	.  error


state 100
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 89
	.  error

	dml_table_expression  goto 158

state 101
	set_statement:  SET comment_opt update_list.    (28)
	update_list:  update_list.',' update_expression 

	','  shift 159
	.  reduce 28 (src line 281)


state 102
	set_statement:  SET comment_opt NAMES.DEFAULT 
	set_statement:  SET comment_opt NAMES.value_expression 
	set_statement:  SET comment_opt NAMES.value_expression COLLATE value_expression 

	NULL  shift 64
	VALUES  shift 72
	DEFAULT  shift 160
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 161
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 103
	update_list:  update_expression.    (201)

	.  reduce 201 (src line 1115)


state 104
	update_expression:  column_name.'=' value_expression 
	update_expression:  column_name.'=' ON 

	'='  shift 162
	.  error


state 105
	column_name:  sql_id.    (169)

	.  reduce 169 (src line 961)


state 106
	value_expression:  value_expression CONCAT.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 163
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 107
	value_expression:  value_expression '&'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 164
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 108
	value_expression:  value_expression '|'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 165
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 109
	value_expression:  value_expression '^'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 166
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 110
	value_expression:  value_expression '+'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 167
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 111
	value_expression:  value_expression '-'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 168
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 112
	value_expression:  value_expression '*'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 169
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 113
	value_expression:  value_expression '/'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 170
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 114
	value_expression:  value_expression '%'.value_expression 

	NULL  shift 64
	VALUES  shift 72
	ID  shift 65
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 66
	'~'  shift 70
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	IF  shift 71
	.  error

	value  goto 54
	value_expression  goto 171
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 115
	show_statement:  SHOW TIME ZONE.    (33)

	.  reduce 33 (src line 317)


state 116
	show_statement:  SHOW TRANSACTION ISOLATION.LEVEL 

	LEVEL  shift 172
	.  error


state 117
	show_statement:  SHOW SESSION AUTHORIZATION.    (35)

	.  reduce 35 (src line 329)


state 118
	value_expression:  value_expression.CONCAT value_expression 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 
	value_expression:  unary_operator value_expression.    (150)

	.  reduce 150 (src line 861)


state 119
	value_expression:  sql_id '('.')' 
	value_expression:  sql_id '('.select_expression_list ')' 
	value_expression:  sql_id '('.DISTINCT select_expression_list ')' 

	DISTINCT  shift 175
	EXISTS  shift 154
	NULL  shift 64
	VALUES  shift 72
	ID  shift 148
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 153
	'~'  shift 70
	NOT  shift 152
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	'*'  shift 146
	IF  shift 71
	')'  shift 173
	.  error

	select_expression_list  goto 174
	select_expression  goto 145
	expression  goto 147
	boolean_expression  goto 149
	condition  goto 151
	value  goto 54
	value_expression  goto 150
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 120
	value_expression:  keyword_as_func '('.select_expression_list ')' 

	EXISTS  shift 154
	NULL  shift 64
	VALUES  shift 72
	ID  shift 148
	STRING  shift 61
	NUMBER  shift 62
	VALUE_ARG  shift 63
	'('  shift 153
	'~'  shift 70
	NOT  shift 152
	CASE  shift 73
	'+'  shift 68
	'-'  shift 69
	'*'  shift 146
	IF  shift 71
	.  error

	select_expression_list  goto 176
	select_expression  goto 145
	expression  goto 147
	boolean_expression  goto 149
	condition  goto 151
	value  goto 54
	value_expression  goto 150
	tuple  goto 56
	keyword_as_func  goto 59
	subquery  goto 67
	unary_operator  goto 57
	column_name  goto 55
	case_expression  goto 60
	sql_id  goto 58

state 121
	column_name:  ID '.'.sql_id 
	column_name:  ID '.'.ID '.' sql_id 

	ID  shift 178
	.  error

	sql_id  goto 177

state 122
	tuple:  '(' value_expression_list.')' 
	value_expression_list:  value_expression_list.',' value_expression 

	','  shift 180
	')'  shift 179
	.  error


state 123
	select_statement:  select_statement.union_op select_statement 
	subquery:  '(' select_statement.')' 

	UNION  shift 39
	MINUS  shift 40
	EXCEPT  shift 41
	INTERSECT  shift 42
	')'  shift 181
	.  error

	union_op  goto 38

state 124
	value_expression_list:  value_expression.    (136)
	value_expression:  value_expression.CONCAT value_expression 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	CONCAT  shift 106
	'|'  shift 108
	'&'  shift 107
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'^'  shift 109
	.  reduce 136 (src line 802)


state 125
	case_expression:  CASE value_expression_opt.when_expression_list else_expression_opt END 

	WHEN  shift 184
	.  error

	when_expression_list  goto 182
	when_expression  goto 183

state 126
	value_expression:  value_expression.CONCAT value_expression 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 
	value_expression_opt:  value_expression.    (163)

	CONCAT  shift 106
	'|'  shift 108
	'&'  shift 107
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'^'  shift 109
	.  reduce 163 (src line 931)


state 127
	create_statement:  CREATE TABLE not_exists_opt.ID force_eof 

	ID  shift 185
	.  error


state 128
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 186
	.  error


state 129
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 91
	.  error

	sql_id  goto 187

state 130
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (223)

	.  reduce 223 (src line 1183)

	force_eof  goto 188

state 131
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 189
	.  error


state 132
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (223)

	.  reduce 223 (src line 1183)

	force_eof  goto 190

state 133
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 191
	.  error


state 134
	drop_statement:  DROP TABLE exists_opt.ID 

	ID  shift 192
	.  error


state 135
	exists_opt:  IF.EXISTS 

	EXISTS  shift 193
	.  error


state 136
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 194
	.  error


state 137
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 91
	.  error

	sql_id  goto 195

state 138
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression SET update_list 

	ID  shift 89
	.  error

	dml_table_expression  goto 196

state 139
	admin_statement:  ADMIN dml_table_expression column_list_opt.row_list 

	SELECT  shift 20
	VALUES  shift 198
	.  error

	select_statement  goto 199
	row_list  goto 197

state 140
	column_list_opt:  '('.column_list ')' 

	ID  shift 65
	.  error

	column_name  goto 201
	column_list  goto 200
	sql_id  goto 105

state 141
	dml_table_expression:  ID '.'.ID 

	ID  shift 202
	.  error


state 142
	truncate_statement:  TRUNCATE comment_opt table_opt.dml_table_expression 

	ID  shift 89
	.  error

	dml_table_expression  goto 203

state 143
	table_opt:  TABLE.    (225)

	.  reduce 225 (src line 1192)


state 144
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.    (19)
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list.',' select_expression 

	FROM  shift 204
	','  shift 205
	.  reduce 19 (src line 221)


state 145
	select_expression_list:  select_expression.    (66)

	.  reduce 66 (src line 489)


state 146
	select_expression:  '*'.    (68)

	.  reduce 68 (src line 499)


state 147
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (73)

	AS  shift 208
	ID  shift 91
	.  reduce 73 (src line 523)

	as_lower_opt  goto 206
	sql_id  goto 207

state 148
	select_expression:  ID.'.' '*' 
	column_name:  ID.'.' sql_id 
	column_name:  ID.'.' ID '.' sql_id 
	sql_id:  ID.    (222)

	'.'  shift 209
	.  reduce 222 (src line 1177)


state 149
	expression:  boolean_expression.    (71)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	OR  shift 211
	AND  shift 210
	.  reduce 71 (src line 513)

